WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281321
[GStreamer] Fix 1.25 deprecation warnings
https://bugs.webkit.org/show_bug.cgi?id=281321
Summary
[GStreamer] Fix 1.25 deprecation warnings
Philippe Normand
Reported
2024-10-11 12:01:12 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-10-11 12:49:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35059
EWS
Comment 2
2024-10-15 03:05:45 PDT
Committed
285186@main
(0cf4ab0811ed): <
https://commits.webkit.org/285186@main
> Reviewed commits have been landed. Closing PR #35059 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-15 03:06:15 PDT
<
rdar://problem/137948156
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug