Cherry-pick 285186@main (0cf4ab0811ed). https://bugs.webkit.org/show_bug.cgi?id=281321

[GStreamer] Fix 1.25 deprecation warnings
    https://bugs.webkit.org/show_bug.cgi?id=281321

    Reviewed by Xabier Rodriguez-Calvar.

    The GQuark-based GStreamer APIs are going to be deprecated in GStreamer 1.26, in favor of the
    GstIdStr-based APIs, so introduce wrapper functions handling both cases in GStreamerCommon.

    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
    (WebCore::GStreamerMediaEndpoint::preprocessStats):
    (WebCore::GStreamerMediaEndpoint::onStatsDelivered):
    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
    (WebCore::fillReportCallback):
    (WebCore::GStreamerStatsCollector::getStats):
    * Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
    (WebCore::capsFromSDPMedia):
    * Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
    (WebCore::gstStructureToJSON):
    (WebCore::gstStructureForeach):
    (WebCore::gstStructureIdSetValue):
    (WebCore::gstStructureMapInPlace):
    (WebCore::gstIdToString):
    (WebCore::gstStructureFilterAndMapInPlace):
    (WebCore::parseGstStructureValue): Deleted.
    * Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:
    * Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
    (webKitWebSrcSetExtraHeader):
    (webKitWebSrcMakeRequest):
    (webKitWebSrcProcessExtraHeaders): Deleted.
    * Source/WebCore/platform/gstreamer/GStreamerElementHarness.cpp:
    (WebCore::MermaidBuilder::describeCaps):
    * Source/WebCore/platform/mediastream/gstreamer/RealtimeIncomingVideoSourceGStreamer.cpp:
    (WebCore::RealtimeIncomingVideoSourceGStreamer::stats):

    Canonical link: https://commits.webkit.org/285186@main

Canonical link: https://commits.webkit.org/282416.303@webkitglib/2.46